--- a/next_config.yml
+++ b/next_config.yml
@@ -161,7 +161,7 @@ links:
    泡: https://linux.dog/blog/)  
    demon: http://www.ggsec.cn/
    墨: https://www.inksec.cn/
-   xz: https://exp10it.cn
+   xz: https://exp10it.cn/
    ChunSource: http://chunsource.top/
    chabug: https://www.chabug.org/
    CE安全网:  https://www.cesafe.com/ 
@@ -172,6 +172,7 @@ links:
    shiyan: http://sh1yan.top/
    依云: https://blog.lilydjwg.me/
    Fire-ant: https://www.luolikong.vip
+   franktly: http://www.franktly.com/
    渗透师 网络安全从业者安全导航:  http://shentoushi.top/ 
    
 # Sidebar Avatar
