--- a/hexo_config.yml
+++ b/hexo_config.yml
@@ -1,11 +1,11 @@
-# Hexo Configuration
+﻿# Hexo Configuration
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Sky666sec's  blog
-subtitle: 用黑客手段对抗黑客
-description: 白帽子,渗透测试,信息安全
+title: Sky666's  blog
+subtitle:  信息安全爱好者
+description:  信息安全 网络安全
 author: sky666
 language: zh-Hans
 timezone:
