--- a/next_config.yml
+++ b/next_config.yml
@@ -95,7 +95,7 @@ menu:
   categories: /categories || 分类
   archives: /archives/ || archive
   tags: /tags/ || tags
-  友链: /Links || Links
+  #友链: /Links || Links
   关于: /about/   || 关于
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
@@ -118,6 +118,7 @@ menu_icons:
 # ---------------------------------------------------------------
 
 # Schemes
+
 #scheme: Muse
 scheme: Mist
 #scheme: Pisces
@@ -135,7 +136,7 @@ scheme: Mist
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, globe icon will be loaded.
 social:
   GitHub: https://github.com/sky666sec || github
-  #E-Mail: mailto:yourname@gmail.com || envelope
+  #E-Mail: sky666sec@gmail.com || envelope
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
   #FB Page: https://www.facebook.com/yourname || facebook
@@ -158,7 +159,7 @@ links_title: 友情链接
 # links
 links:
    国光: http://www.sqlsec.com/
-   泡: https://linux.dog/blog/)  
+   泡: https://linux.dog/
    demon: http://www.ggsec.cn/
    墨: https://www.inksec.cn/
    xz: https://exp10it.cn/
@@ -173,6 +174,8 @@ links:
    依云: https://blog.lilydjwg.me/
    Fire-ant: https://www.luolikong.vip
    franktly: http://www.franktly.com/
+   x14hack: http://www.x14hack.com/
+   小陈: http://www.hackxc.cc
    渗透师 网络安全从业者安全导航:  http://shentoushi.top/ 
    
 # Sidebar Avatar
