--- a/hexo_config.yml
+++ b/hexo_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Sky666's  blog
-subtitle:  信息安全爱好者
-description:  信息安全 网络安全
+title: Sky666sec's  blog
+subtitle:  一个修电脑的网络安全爱好者
+description:  一个修电脑的网络安全爱好者
 author: sky666
 language: zh-Hans
 timezone:
